# currency-rates

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml  docker-publish.yml
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  seed.rs  service.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/db/: mod.rs  repository.rs
src/providers/: ecb.rs  mod.rs  nbu.rs  provider.rs
